traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:5: error: overriding method avance in class SimpleBuggle of type ()Unit;
 method avance needs `override' modifier
def avance(){
    ^TraversalDiagonal:5: error: overriding method avance in class AbstractBuggle of type ()Unit;
 method avance needs `override' modifier
def avance(){
    ^